# NaNLa

./: .gitignore  CMakeLists.txt
NaNLA/: CMakeLists.txt
NaNLA/Common/: Common.cpp  Common.h  CommonKernel.cu  CommonKernel.cuh
NaNLA/Common/CudaDeviceGuard/: CudaDeviceGuard.cpp  CudaDeviceGuard.h
NaNLA/Common/PerformanceTable/: PerformanceTable.cpp  PerformanceTable.h
NaNLA/Common/ThreadPool/: ThreadPool.cpp  ThreadPool.h
NaNLA/Exception/: InvalidDimensionError.cpp  InvalidDimensionError.h
NaNLA/Matrix/: AbstractDeviceMatrix.cpp  AbstractDeviceMatrix.h  AbstractHostMatrix.cpp  AbstractHostMatrix.h  AbstractMatrix.cpp  AbstractMatrix.h  AbstractTileMatrix.cpp  AbstractTileMatrix.h  DeviceMatrix.cpp  DeviceMatrix.h  HostMatrix.cpp  HostMatrix.h  Matrix.cpp  Matrix.h  MatrixFactory.cpp  MatrixFactory.h  MatrixFileLoader.cpp  MatrixFileLoader.h  MatrixSerializer.cpp  MatrixSerializer.h  TiledDeviceMatrix.cpp  TiledDeviceMatrix.h  TiledHostMatrix.cpp  TiledHostMatrix.h  empty.cpp  empty.cu  r_AbstractDeviceMatrix.cpp  r_AbstractDeviceMatrix.h  r_AbstractTileMatrix.cpp  r_AbstractTileMatrix.h  r_DeviceMatrix.cpp  r_DeviceMatrix.h  r_HostMatrix.cpp  r_HostMatrix.h  r_Matrix.cpp  r_Matrix.h  r_TiledDeviceMatrix.cpp  r_TiledDeviceMatrix.h  r_TiledHostMatrix.cpp  r_TiledHostMatrix.h
NaNLA/Matrix/Allocator/: DeviceAllocator.cpp  DeviceAllocator.h  HostAllocator.cpp  HostAllocator.h  HostCacheAlignedAllocator.cpp  HostCacheAlignedAllocator.h  PinnedAllocator.cpp  PinnedAllocator.h
NaNLA/Matrix/MatrixOperations/: MatrixCudaOperations.cu  MatrixCudaOperations.cuh  MatrixOperations.cpp  MatrixOperations.h
NaNLA/Matrix/MemoryController/: AbstractMemoryController.cpp  AbstractMemoryController.h  AbstractTileMemoryController.cpp  AbstractTileMemoryController.h  BaseMemoryController.cpp  BaseMemoryController.h  DeviceAccessible.h  DeviceMemoryController.cpp  DeviceMemoryController.h  HostAccessible.h  HostCacheAlignedMemoryController.cpp  HostCacheAlignedMemoryController.h  HostCacheMemoryController.cpp  HostCacheMemoryController.h  HostMemoryController.cpp  HostMemoryController.h  PinnedMemoryController.cpp  PinnedMemoryController.h  PinnedTileRowMajorMemoryController.cpp  PinnedTileRowMajorMemoryController.h  Tileable.h  TiledColMajorMemoryController.cpp  TiledColMajorMemoryController.h  TiledDeviceMemoryController.cpp  TiledDeviceMemoryController.h  TiledHostMemoryController.cpp  TiledHostMemoryController.h  TiledMemoryController.cpp  TiledMemoryController.h  TiledRowMajorMemoryController.cpp  TiledRowMajorMemoryController.h  r_AbstractMemoryController.cpp  r_AbstractMemoryController.h  r_DeviceAccessible.h  r_DeviceMemoryController.cpp  r_DeviceMemoryController.h  r_HostAccessible.h  r_HostCacheAlignedMemoryController.cpp  r_HostCacheAlignedMemoryController.h  r_HostMemoryController.cpp  (+8 more)
NaNLA/Matrix/MemoryController/Utils/: MemoryControllerUtilities.cpp  MemoryControllerUtilities.h
NaNLA/Matrix/MemoryTransferHandler/: MemoryTransferHandler.cpp
NaNLA/Matrix/TransferStrategy/: DefaultTransferStrategy.cpp  DefaultTransferStrategy.h  DefaultTransferStrategyCudaKernels.cu  DefaultTransferStrategyCudaKernels.cuh  r_DefaultTransferStrategy.cpp  r_DefaultTransferStrategy.h
samples/: CMakeLists.txt
samples/LinkerIssue/: CMakeLists.txt  main.cpp  test.cpp  test.h
samples/MatrixAddCublasCompare/: CMakeLists.txt  validation.cpp
samples/MatrixDotNaNLaCublasValidation/: CMakeLists.txt  validation.cpp
samples/MatrixTileMultiplication/: CMakeLists.txt  MatrixTileMultiplication.cpp
samples/PerformanceTests/: AccessPerformance.cpp  AddTests.cpp  AddTests.h  CMakeLists.txt  D_CMakeLists.txt  DotTests.cpp  DotTests.h
samples/SimpleNeuralNetwork/: CMakeLists.txt  DataPoint.h  SimpleNeuralNetwork.cpp  SimpleNeuralNetwork.h  SixClassDataGenerator.cpp  SixClassDataGenerator.h  ThreeClassDataGenerator.cpp  ThreeClassDataGenerator.h  main.cpp
samples/VirtualTemplateClass/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp
tests/include/MatrixTestSuites/Utilities/: TestUtilities.h
tests/src/CommonTestSuites/CudaDeviceGuardTestSuite/: CudaDeviceGuardTestSuite.cpp
tests/src/MatrixTestSuites/: MatrixDotProductTestSuite.cpp  MatrixTestSuite.cpp  MatrixTransposeTestSuite.cpp
tests/src/MatrixTestSuites/MemoryControllerTestSuites/: DeviceMemoryControllerTestSuite.cpp  HostCacheAlignedMemoryControllerTestSuite.cpp  HostMemoryControllerTestSuite.cpp  PinnedMemoryControllerTestSuite.cpp  TiledDeviceMemoryControllerTestSuite.cpp  TiledHostMemoryControllerTestSuite.cpp
tests/src/MatrixTestSuites/TransferStrategyTestSuites/: TransferStrategyTestSuite.cpp
